--- a/src/auth/components/login/styles/login.css
+++ b/src/auth/components/login/styles/login.css
@@ -6,7 +6,11 @@
     align-items: center;
   }
 
-  
+  .logo-image{
+    width:60%;
+     height:50 
+    
+  }
   .login-container {
     width: 100%;
     max-width: 400px;
@@ -85,10 +89,12 @@
   }
 
   .social-icon {
-    font-size: 1.8rem;
+
+    font-size: 3rem;
     color: white;
     cursor: pointer;
     transition: transform 0.2s ease, color 0.2s ease;
+    margin: 0 10px
   }
 
   .social-icon:hover {
