--- a/src/components/homePage/styles/home.css
+++ b/src/components/homePage/styles/home.css
@@ -49,6 +49,12 @@
     background-color: #1ed760; 
     color: white;
   }
+  .card-img-top {
+    width: 100%; 
+    height: 200px; 
+    object-fit: cover; 
+    object-position: center; 
+  }
   .navbar-brand {
     display: flex;
     align-items: center;
